# RustyTodos

./: Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-macos.yml
src/: app.rs  daemon.rs  main.rs  main.ts  todo.rs  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  command.rs  daemon.rs  date_parser.rs  main.rs  todo.rs
