[package]
name = "RustyTodos"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "5.0"
ratatui = "0.20"
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
notifica = "3.0.2"
