[package]
name = "RustyTodos"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
tauri = { version = "2.6", features = [] }
tauri-build = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3"

[target.'cfg(target_os = "windows")'.dependencies]
notifica = "3.0.2"
